Featured images now appear correctly on small and large screen sizes

--- a/Scrimba Projects/The Front-End Developer Career Path/Essential CSS Concepts/NFT Website/index.css
+++ b/Scrimba Projects/The Front-End Developer Career Path/Essential CSS Concepts/NFT Website/index.css
@@ -117,12 +117,11 @@ header,
 .section-two-image-container {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
 }
 
 .feature-image {
-    width: 48.8%;
     border-radius: 4.6px;
+    margin-bottom: 1em;
 }
 
 footer {
@@ -138,10 +137,17 @@ footer {
        of 480px or wider
     2. Within the media query, select .section-two-image-container
        and add the flexbox property to display the images on the same row
+    3. Inside the media query, select .feature-image and 
+       add the fluid width for wider screens only
 */
 
 @media (min-width: 480px) {
     .section-two-image-container {
         flex-direction: row;
+        justify-content: space-between;
+    }
+    
+    .feature-image {
+        width: 48.8%;     
     }
 }
